Add:/ create new profile screen

--- a/app.json
+++ b/app.json
@@ -32,6 +32,18 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Slidee app accesses your gallery."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Slidee to use your location."
+        }
       ]
     ],
     "experiments": {
