--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-checkbox": "~4.0.0"
+    "expo-checkbox": "~4.0.0",
+    "expo-image-picker": "~16.0.3",
+    "@react-native-picker/picker": "2.9.0",
+    "expo-location": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
